<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cdx.bas</groupId>
	<artifactId>bank-account-simulator</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>domain</module>
		<module>application</module>
		<module>client</module>
	</modules>
	<properties>
		<assertj.version>3.23.1</assertj.version>
		<compiler-plugin.version>3.8.1</compiler-plugin.version>
		<dv8tion.version>5.0.0-alpha.13</dv8tion.version>
		<jandex-maven-plugin.version>1.2.3</jandex-maven-plugin.version>
		<jandex.maven.version>1.2.3</jandex.maven.version>
		<java.version>17</java.version>
		<junit5.version>2.11.2.Final</junit5.version>
		<maven.compiler.release>17</maven.compiler.release>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
		<quarkus.platform.version>2.13.1.Final</quarkus.platform.version>
		<quarkus-plugin.version>${quarkus.platform.version}</quarkus-plugin.version>
		<skipITs>true</skipITs>
		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.cdx.bas</groupId>
				<artifactId>domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cdx.bas</groupId>
				<artifactId>application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cdx.bas</groupId>
				<artifactId>client</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.quarkus</groupId>
				<artifactId>quarkus-bom</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.quarkus</groupId>
				<artifactId>quarkus-junit5</artifactId>
				<version>${junit5.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
			</dependency>
			<dependency>
				<groupId>net.dv8tion</groupId>
				<artifactId>JDA</artifactId>
				<version>${dv8tion.version}</version>
			</dependency>
			<dependency>
				<groupId>io.quarkus</groupId>
				<artifactId>quarkus-maven-plugin</artifactId>
				<version>${quarkus.platform.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.jandex</groupId>
				<artifactId>jandex-maven-plugin</artifactId>
				<version>${jandex.maven.version}</version>
			</dependency>
			<dependency>
				<groupId>io.quarkiverse.hibernatetypes</groupId>
				<artifactId>quarkus-hibernate-types</artifactId>
				<version>0.2.0</version>
			</dependency>
			<dependency>
			<groupId>com.vladmihalcea</groupId>
			<artifactId>hibernate-types-55</artifactId>
			<version>2.19.2</version>
			</dependency>
			<dependency>
    <groupId>org.codehaus.jackson</groupId>
    <artifactId>jackson-core-asl</artifactId>
    <version>1.1.0</version>
</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jboss.jandex</groupId>
					<artifactId>jandex-maven-plugin</artifactId>
					<version>${jandex-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>make-index</id>
							<goals>
								<goal>jandex</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>io.quarkus</groupId>
					<artifactId>quarkus-maven-plugin</artifactId>
					<version>${quarkus-plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>build</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire-plugin.version}</version>
					<configuration>
						<systemProperties>
							<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
						</systemProperties>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>native</id>
			<activation>
				<property>
					<name>native</name>
				</property>
			</activation>
		</profile>
	</profiles>
</project>
